[package]
name = "app"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
resolver = "2"

[dependencies]
ffmpeg-next = "6"
env_logger = "0.11"
winit = { version = "0.29", features = ["android-native-activity"] }
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck  = { version = "1.15", features = ["derive"] }
transport = { path = "../transport" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

